fix: update default values for API_PREFIX and CORS_ALLOWED_ORIGINS in Docker Compose configuration
- Changed the syntax for default values in docker-compose.prod.hub.yml to ensure proper fallback behavior for API_PREFIX and CORS_ALLOWED_ORIGINS environment variables.

--- a/docker-compose.prod.hub.yml
+++ b/docker-compose.prod.hub.yml
@@ -40,8 +40,8 @@ services:
       # JWT để validate tokens từ clients
       - JWT_SIGNER_KEY=${JWT_SECRET}
       # API Gateway configuration (match với application-prod.yml)
-      - API_PREFIX=${API_PREFIX:/api/v1}
-      - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://127.0.0.1:5173}
+      - API_PREFIX=${API_PREFIX:-/api/v1}
+      - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS:-http://localhost:5173,http://127.0.0.1:5173}
       # Service URIs (match với application-prod.yml routes)
       - IDENTITY_URI=${IDENTITY_URI:-http://identity-service:8081}
       - PROJECT_URI=${PROJECT_URI:-http://project-service:8082}
