chore: update Docker Compose and build scripts for Docker Hub integration
- Modified docker-compose.prod.hub.yml to enable SSL port mapping and include Let's Encrypt volume for SSL certificates.
- Updated env.prod.example to add Docker Hub configuration variables for username and image tag.
- Adjusted build-and-push scripts to reference the new docker-compose.prod.hub.yml for pulling and running services.

--- a/docker-compose.prod.hub.yml
+++ b/docker-compose.prod.hub.yml
@@ -419,10 +419,10 @@ services:
     container_name: mutrapro-nginx
     ports:
       - "80:80"
-      # - "443:443"  # Uncomment khi đã có SSL certificate
+      - "443:443"
     volumes:
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      # - ./docker/nginx/ssl:/etc/nginx/ssl:ro  # Uncomment khi đã có SSL certificate
+      - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
       - api-gateway
       - identity-service
