--- a/env.prod.example
+++ b/env.prod.example
@@ -235,6 +235,14 @@ CORS_ORIGIN=http://your-ec2-ip-or-domain,https://your-domain.com
 # OUTBOX_MAX_RETRIES=3
 
 # ============================================
+# Docker Hub Configuration (Nếu dùng pre-built images)
+# ============================================
+# Chỉ cần điền nếu dùng docker-compose.prod.hub.yml (images từ Docker Hub)
+# Nếu dùng docker-compose.prod.yml (build local), không cần
+DOCKER_HUB_USERNAME=mutrapro
+IMAGE_TAG=latest
+
+# ============================================
 # Notes
 # ============================================
 # 1. Tất cả passwords phải mạnh và unique
