chore: update CORS configuration in environment files
- Modified env.prod.example and env.ready.txt to specify all necessary frontend domains for CORS, enhancing security and ensuring proper API access.
- Added comments to clarify the importance of including all relevant domains for deployment.

--- a/env.prod.example
+++ b/env.prod.example
@@ -121,7 +121,11 @@ REACT_APP_API_URL=http://your-ec2-ip-or-domain
 # ============================================
 # CORS Configuration
 # ============================================
-CORS_ORIGIN=http://your-ec2-ip-or-domain,https://your-domain.com
+# ⚠️ QUAN TRỌNG: Thêm TẤT CẢ domains của frontend
+# - api.mutrapro.top: API domain
+# - www.mutrapro.top: Frontend domain (nơi user truy cập)
+# - mutrapro.top: Root domain (nếu có redirect)
+CORS_ALLOWED_ORIGINS=https://api.mutrapro.top,https://www.mutrapro.top,https://mutrapro.top
 
 # ============================================
 # Server Configuration (Optional - có defaults)
