feat: implement file upload and download functionality in chat service
- Added endpoints for uploading and downloading files in ChatMessageController.
- Implemented file validation and S3 integration in ChatMessageService.
- Enhanced error handling for file operations with new error codes in ChatErrorCodes.
- Updated frontend components to support file uploads and downloads, including UI enhancements for file handling in MessageBubble and MessageInput.
- Configured multipart file upload settings in application properties for both development and production environments.

--- a/backend/chat-service/src/main/resources/application-dev.yaml
+++ b/backend/chat-service/src/main/resources/application-dev.yaml
@@ -19,6 +19,14 @@ spring:
         jdbc:
           time_zone: UTC
   
+  # Multipart file upload configuration
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 50MB  # Maximum size per file (50MB)
+      max-request-size: 50MB  # Maximum size per request (50MB)
+      file-size-threshold: 2KB  # Size threshold after which files will be written to disk
+  
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
     producer:
@@ -78,6 +86,15 @@ management:
     export:
       prometheus:
         enabled: true
+
+# AWS S3 Configuration
+aws:
+  s3:
+    enabled: true
+    bucket-name: mutrapro-dev-files
+    region: ap-southeast-1
+    access-key: AKIAZ24ITCMNFIY2Z3VX
+    secret-key: 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
 
 logging:
   level:
