--- a/backend/chat-service/src/main/resources/application-prod.yaml
+++ b/backend/chat-service/src/main/resources/application-prod.yaml
@@ -32,6 +32,14 @@ spring:
         order_inserts: true
         order_updates: true
   
+  # Multipart file upload configuration
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 50MB  # Maximum size per file (50MB)
+      max-request-size: 50MB  # Maximum size per request (50MB)
+      file-size-threshold: 2KB  # Size threshold after which files will be written to disk
+  
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
     producer:
