chore: remove studio service from project
- Deleted all references to the studio service across various configuration files, including Docker, Kubernetes, and environment files.
- Updated documentation to reflect the removal of the studio service from the deployment and build processes.
- Adjusted port mappings and service lists in Docker Compose and Kubernetes manifests accordingly.

--- a/backend/api-gateway/src/main/resources/application-dev.yml
+++ b/backend/api-gateway/src/main/resources/application-dev.yml
@@ -33,7 +33,7 @@ spring:
               filters:
                 - StripPrefix=3
 
-            # Project Service
+            # Project Service (handles contracts, tasks, files, and studio bookings)
             - id: project-service
               uri: ${PROJECT_URI:http://localhost:8082}
               predicates:
@@ -62,14 +62,6 @@ spring:
               uri: ${SPECIALIST_URI:http://localhost:8086}
               predicates:
                 - Path=${app.api-prefix}/specialists/**
-              filters:
-                - StripPrefix=3
-
-            # Studio Service
-            - id: studio-service
-              uri: ${STUDIO_URI:http://localhost:8087}
-              predicates:
-                - Path=${app.api-prefix}/studios/**
               filters:
                 - StripPrefix=3
 
