--- a/backend/billing-service/src/main/resources/application-dev.yml
+++ b/backend/billing-service/src/main/resources/application-dev.yml
@@ -54,3 +54,15 @@ app:
       billing.milestone.paid: billing-milestone-paid
       billing.revision.fee.paid: billing-revision-fee-paid
       billing.revision.fee.refunded: billing-revision-fee-refunded # New topic for refunded revision fees
+
+# Management & Actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: always
+      probes:
+        enabled: true
