--- a/backend/identity-service/src/main/resources/application-prod.yml
+++ b/backend/identity-service/src/main/resources/application-prod.yml
@@ -61,3 +61,15 @@ outbound:
     client-id: ${GOOGLE_CLIENT_ID}
     client-secret: ${GOOGLE_CLIENT_SECRET}
     redirect-uri: ${GOOGLE_REDIRECT_URI}
+
+# Management & Actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: when-authorized
+      probes:
+        enabled: true
