--- a/backend/request-service/src/main/resources/application-prod.yml
+++ b/backend/request-service/src/main/resources/application-prod.yml
@@ -74,3 +74,15 @@ project:
 identity:
   service:
     base-url: ${IDENTITY_SERVICE_BASE_URL:http://identity-service:8081}
+
+# Management & Actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: when-authorized
+      probes:
+        enabled: true
