feat: add AWS S3 configuration to production settings
- Introduced AWS S3 configuration in both production Docker Compose files and application properties for chat service.
- Enabled S3 support with necessary environment variables for bucket name, region, access key, and secret key.
- Updated deployment documentation to reflect changes in AWS S3 settings and ensure proper integration across services.

--- a/backend/chat-service/src/main/resources/application-dev.yaml
+++ b/backend/chat-service/src/main/resources/application-dev.yaml
@@ -87,6 +87,10 @@ management:
       prometheus:
         enabled: true
 
+notification:
+  service:
+    base-url: http://localhost:8085
+
 # AWS S3 Configuration
 aws:
   s3:
