chore: enhance application configuration for Prometheus metrics
- Added application name configuration for each service to improve identification in monitoring tools.
- Updated management endpoints to include Prometheus metrics exposure across all services.
- Enabled Prometheus metrics export and added application tags for better observability.

--- a/backend/chat-service/src/main/resources/application-prod.yaml
+++ b/backend/chat-service/src/main/resources/application-prod.yaml
@@ -5,6 +5,8 @@ server:
     include-binding-errors: always
 
 spring:
+  application:
+    name: chat-service
   datasource:
     url: ${DATABASE_URL}
     username: ${DATABASE_USERNAME}
@@ -104,6 +106,8 @@ management:
     health:
       show-details: when-authorized
   metrics:
+    tags:
+      application: ${spring.application.name}
     export:
       prometheus:
         enabled: true
