--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -13,6 +13,15 @@ http {
     access_log /var/log/nginx/access.log main;
     error_log /var/log/nginx/error.log;
 
+    # DNS Resolver cho Docker network
+    # 127.0.0.11 là Docker's internal DNS server
+    # valid=10s: cache DNS result trong 10 giây, sau đó resolve lại
+    resolver 127.0.0.11 valid=10s;
+    
+    # Variable để force DNS resolution mỗi request (khi dùng trong proxy_pass)
+    # Điều này giúp Nginx tự động resolve lại IP khi container restart
+    set $api_gateway_upstream "http://api-gateway:8080";
+
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
@@ -33,6 +42,9 @@ http {
     ssl_session_timeout 10m;
 
     # Upstream API Gateway
+    # Lưu ý: Upstream block cache IP trong memory
+    # Nếu cần force DNS resolution mỗi request, có thể dùng variable $api_gateway_upstream
+    # thay vì upstream block (nhưng sẽ mất lợi ích của upstream như load balancing)
     upstream api_gateway {
         server api-gateway:8080;
     }
@@ -133,6 +145,14 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
+            
+            # Pass through CORS headers from backend (Nginx mặc định pass tất cả headers, nhưng đảm bảo rõ ràng)
+            proxy_pass_header Access-Control-Allow-Origin;
+            proxy_pass_header Access-Control-Allow-Credentials;
+            proxy_pass_header Access-Control-Allow-Methods;
+            proxy_pass_header Access-Control-Allow-Headers;
+            proxy_pass_header Access-Control-Expose-Headers;
+            proxy_pass_header Vary;
             
             # Timeouts
             proxy_connect_timeout 60s;
