--- a/backend/api-gateway/src/main/resources/application-prod.yml
+++ b/backend/api-gateway/src/main/resources/application-prod.yml
@@ -75,7 +75,7 @@ spring:
 app:
   api-prefix: ${API_PREFIX:/api/v1}
   cors:
-    allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://127.0.0.1:5173}
+    allowed-origins: ${CORS_ALLOWED_ORIGINS:https://www.mutrapro.top,https://mutrapro.top,http://localhost:5173,http://127.0.0.1:5173}
 
 management:
   endpoints:
@@ -85,8 +85,9 @@ management:
   metrics:
     tags:
       application: ${spring.application.name}
-    export:
-      prometheus:
+  prometheus:
+    metrics:
+      export:
         enabled: true
 
 jwt:
