--- a/backend/notification-service/pom.xml
+++ b/backend/notification-service/pom.xml
@@ -117,6 +117,12 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-actuator</artifactId>
 	</dependency>
+
+	<!-- Micrometer Prometheus Registry for metrics export -->
+	<dependency>
+		<groupId>io.micrometer</groupId>
+		<artifactId>micrometer-registry-prometheus</artifactId>
+	</dependency>
 </dependencies>
 
 	<build>
