feat: integrate SePay payment gateway configuration and webhook handling
- Added SePay configuration parameters to environment files for both development and production environments, including API key, account number, bank code, order expiry, and prefix.
- Updated security configurations in the API Gateway and Billing Service to allow unauthenticated access to the SePay webhook callback endpoint.
- Implemented a new method in the WalletService to handle wallet top-ups from SePay webhook callbacks, ensuring proper validation and transaction recording.
- Enhanced application configuration files to include SePay settings for improved payment processing capabilities.

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -17,10 +17,6 @@ http {
     # 127.0.0.11 là Docker's internal DNS server
     # valid=10s: cache DNS result trong 10 giây, sau đó resolve lại
     resolver 127.0.0.11 valid=10s;
-    
-    # Variable để force DNS resolution mỗi request (khi dùng trong proxy_pass)
-    # Điều này giúp Nginx tự động resolve lại IP khi container restart
-    set $api_gateway_upstream "http://api-gateway:8080";
 
     sendfile on;
     tcp_nopush on;
@@ -43,8 +39,7 @@ http {
 
     # Upstream API Gateway
     # Lưu ý: Upstream block cache IP trong memory
-    # Nếu cần force DNS resolution mỗi request, có thể dùng variable $api_gateway_upstream
-    # thay vì upstream block (nhưng sẽ mất lợi ích của upstream như load balancing)
+    # Nginx sẽ tự động resolve lại DNS khi container restart nhờ resolver directive ở trên
     upstream api_gateway {
         server api-gateway:8080;
     }
@@ -73,7 +68,8 @@ http {
 
     # HTTPS Server
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
         server_name api.mutrapro.top;
 
         # SSL Certificate paths (Let's Encrypt - default location)
