feat: implement payment order completion notification system
- Added PaymentOrderCompletedNotificationEvent class to define the structure of payment completion notifications.
- Enhanced SePayService to publish notifications upon successful payment order completion, including relevant details such as payment order ID and user information.
- Created PaymentOrderCompletedNotificationConsumer to handle incoming notifications and trigger in-app notifications for users.
- Updated WalletService to include payment order ID in transaction metadata for better tracking.
- Introduced new routes and pages in the frontend for handling payment top-ups and displaying payment success messages.
- Configured application properties for notification topics in both development and production environments.

--- a/backend/notification-service/src/main/resources/application-dev.yml
+++ b/backend/notification-service/src/main/resources/application-dev.yml
@@ -67,6 +67,7 @@ app:
       billing.revision.fee.refunded: billing-revision-fee-refunded
       milestone.paid.notification: milestone-paid-notification
       milestone.ready.for.payment.notification: milestone-ready-for-payment-notification
+      payment.order.completed.notification: payment-order-completed-notification
 
 logging:
   level:
