--- a/backend/billing-service/src/main/resources/application-dev.yml
+++ b/backend/billing-service/src/main/resources/application-dev.yml
@@ -50,6 +50,7 @@ app:
       billing.milestone.paid: billing-milestone-paid
       billing.revision.fee.paid: billing-revision-fee-paid
       billing.revision.fee.refunded: billing-revision-fee-refunded # New topic for refunded revision fees
+      payment.order.completed.notification: payment-order-completed-notification # Notification khi payment order completed
 
 # Management & Actuator
 management:
