--- a/backend/billing-service/src/main/resources/application-prod.yml
+++ b/backend/billing-service/src/main/resources/application-prod.yml
@@ -52,6 +52,7 @@ app:
       billing.milestone.paid: ${KAFKA_TOPIC_BILLING_MILESTONE_PAID:billing-milestone-paid}
       billing.revision.fee.paid: ${KAFKA_TOPIC_BILLING_REVISION_FEE_PAID:billing-revision-fee-paid}
       billing.revision.fee.refunded: ${KAFKA_TOPIC_BILLING_REVISION_FEE_REFUNDED:billing-revision-fee-refunded} # New topic for refunded revision fees
+      payment.order.completed.notification: ${KAFKA_TOPIC_PAYMENT_ORDER_COMPLETED_NOTIFICATION:payment-order-completed-notification} # Notification khi payment order completed
 
 # Management & Actuator
 management:
