chore: update logging levels in production configuration files
- Changed root logging level from WARN to INFO in both chat-service and request-service application configuration files.
- Added specific logging levels for Spring framework components and Hibernate to improve log visibility and debugging capabilities.

--- a/backend/chat-service/src/main/resources/application-prod.yaml
+++ b/backend/chat-service/src/main/resources/application-prod.yaml
@@ -118,7 +118,11 @@ notification:
 
 logging:
   level:
-    root: WARN
+    root: INFO
     com.mutrapro.chat_service: INFO
+    org.springframework: INFO
+    org.springframework.boot: INFO
+    org.springframework.web: INFO
     org.springframework.messaging: INFO
-
+    org.hibernate: WARN
+    org.apache.kafka: WARN
