feat: implement avatar upload functionality for specialists
- Added a new endpoint for specialists to upload their avatar images.
- Implemented validation for file type and size in the upload process.
- Updated the SpecialistProfileService to handle avatar uploads and save the URL to the specialist's profile.
- Enhanced the frontend to support avatar file selection and display during the upload process.
- Updated relevant configuration files for AWS S3 integration to facilitate file storage.

--- a/backend/specialist-service/src/main/resources/application-dev.yml
+++ b/backend/specialist-service/src/main/resources/application-dev.yml
@@ -36,6 +36,15 @@ feign:
         connectTimeout: 5000
         readTimeout: 60000  # 60 seconds for batch API calls
 
+# AWS S3 Configuration
+aws:
+  s3:
+    enabled: true
+    region: ap-southeast-1
+    access-key: AKIAZ24ITCMNFIY2Z3VX
+    secret-key: 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
+    bucket-name: mutrapro-dev-files
+
 # Management & Actuator
 management:
   endpoints:
