--- a/backend/specialist-service/src/main/resources/application-prod.yml
+++ b/backend/specialist-service/src/main/resources/application-prod.yml
@@ -26,6 +26,15 @@ logging:
 jwt:
   signerKey: ${JWT_SIGNER_KEY}
 
+# AWS S3 Configuration
+aws:
+  s3:
+    enabled: ${AWS_S3_ENABLED:true}
+    region: ${AWS_S3_REGION:ap-southeast-1}
+    access-key: ${AWS_S3_ACCESS_KEY:}
+    secret-key: ${AWS_S3_SECRET_KEY:}
+    bucket-name: ${AWS_S3_BUCKET_NAME:mutrapro-dev-files}
+
 # Management & Actuator
 management:
   endpoints:
