--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,6 +24,7 @@
     "expo-crypto": "^15.0.7",
     "expo-document-picker": "~14.0.7",
     "expo-file-system": "~19.0.19",
+    "expo-image-picker": "^17.0.9",
     "expo-linear-gradient": "~15.0.7",
     "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
