feat: enhance demo management with upload functionality and visibility updates
- Implemented a new endpoint for specialists to upload demo files, returning a public URL for storage.
- Updated the AdminDemoController and related services to reflect changes in demo visibility management, focusing on is_public.
- Enhanced the CreateDemoRequest and UpdateDemoRequest DTOs to include new fields for recording role, genres, and visibility options.
- Modified frontend components to support demo file uploads and visibility toggles, improving user experience.
- Updated configuration files to handle file upload limits and validation for audio files.

--- a/backend/specialist-service/src/main/resources/application-prod.yml
+++ b/backend/specialist-service/src/main/resources/application-prod.yml
@@ -17,6 +17,12 @@ spring:
   sql:
     init:
       mode: never
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 50MB  # Maximum size per file (50MB) - cho demo audio files
+      max-request-size: 50MB  # Maximum size per request (50MB)
+      file-size-threshold: 2KB  # Size threshold after which files will be written to disk
 
 logging:
   level:
