feat: add EAS configuration and project ID to app.json
- Introduced eas.json for build configuration, specifying development, preview, and production settings.
- Added project ID to app.json under the extra section for EAS integration.

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -32,6 +32,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "cbc891af-89d9-46a1-b699-2df0ec32df1b"
+      }
     }
   }
 }
