--- a/docker-compose.prod.hub.yml
+++ b/docker-compose.prod.hub.yml
@@ -329,6 +329,12 @@ services:
       - DATABASE_PASSWORD=${SPECIALIST_DATASOURCE_PASSWORD}
       # JWT để validate tokens từ API Gateway
       - JWT_SIGNER_KEY=${JWT_SECRET}
+      # AWS S3 Configuration (cho file storage - match với application-prod.yml)
+      - AWS_S3_ENABLED=${AWS_S3_ENABLED:-true}
+      - AWS_S3_BUCKET_NAME=${AWS_S3_BUCKET_NAME:-mutrapro-prod-files}
+      - AWS_S3_REGION=${AWS_S3_REGION:-ap-southeast-1}
+      - AWS_S3_ACCESS_KEY=${AWS_ACCESS_KEY_ID}
+      - AWS_S3_SECRET_KEY=${AWS_SECRET_ACCESS_KEY}
     networks:
       - mutrapro-network
     restart: unless-stopped
