feat: enhance service request and wallet functionalities
- Added support for preferred vocalists in ServiceRequestScreen for arrangement_with_recording services.
- Updated ServiceQuoteScreen to handle new fields for preferred specialists and improved error handling.
- Introduced new payment screens: TopupPayment and PaymentSuccess, with navigation adjustments in MainStack and BottomTabNavigator.
- Enhanced WalletScreen with updated deposit modal and navigation to TopupPayment.
- Updated API configurations to accommodate new endpoints for payment and specialist services.

--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -1,7 +1,13 @@
 {
   "cli": { "version": ">= 16.28.0", "appVersionSource": "remote" },
   "build": {
-    "development": { "developmentClient": true, "distribution": "internal" },
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "env": {
+        "API_BASE_URL": "http://192.168.2.4:8080"
+      }
+    },
     "preview": {
       "distribution": "internal",
       "android": { "buildType": "apk" },
