feat: enhance artist response and booking flow with hourly rate integration
- Added hourlyRate field to AvailableArtistResponse for better pricing transparency.
- Updated StudioBookingService to handle hourlyRate for vocalists and instrumentalists during booking.
- Enhanced PublicSpecialistService to include hourlyRate in the specialist details returned.
- Improved RecordingFlowController and related components to display and calculate fees based on hourly rates.
- Refactored RecordingStep4 to provide a detailed breakdown of costs, including participant fees and equipment rentals.

--- a/backend/specialist-service/src/main/resources/application-dev.yml
+++ b/backend/specialist-service/src/main/resources/application-dev.yml
@@ -51,6 +51,16 @@ aws:
     secret-key: 1nS91Joigp9WxI6zCx9229mmueWxoGc/cZXfQrPe
     bucket-name: mutrapro-dev-files
 
+# Project Service Configuration
+project:
+  service:
+    base-url: ${PROJECT_SERVICE_BASE_URL:http://localhost:8082}
+
+# Identity Service Configuration
+identity:
+  service:
+    base-url: ${IDENTITY_SERVICE_BASE_URL:http://localhost:8081}
+
 # Management & Actuator
 management:
   endpoints:
