--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^7.8.6",
     "@react-navigation/drawer": "^7.7.4",
     "@react-navigation/native": "^7.1.21",
+    "@react-navigation/native-stack": "^7.8.6",
     "@react-navigation/stack": "^7.6.7",
     "@stomp/stompjs": "^7.2.1",
     "axios": "^1.13.2",
@@ -32,6 +33,7 @@
     "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.5",
     "react-native-safe-area-context": "~5.6.2",
