feat: add submission notification events for manager and specialist
- Implemented `createSubmissionSubmittedNotification` method to notify managers when specialists submit files for the first time.
- Added `createSubmissionRejectedNotification` method to notify specialists when their submission is rejected by the manager.
- Updated application configuration files to include new Kafka topics for submission events.
- Enhanced notification types to accommodate new submission-related notifications.
- Refactored file submission service to trigger the new notification events upon submission and rejection actions.

--- a/backend/notification-service/src/main/resources/application-dev.yml
+++ b/backend/notification-service/src/main/resources/application-dev.yml
@@ -59,6 +59,8 @@ app:
       contract.notification: contract-notification
       chat.room.created: chat-events
       submission.delivered: submission-delivered
+      submission.submitted: submission-submitted
+      submission.rejected: submission-rejected
       revision.requested: revision-requested
       revision.delivered: revision-delivered
       revision.submitted: revision-submitted
