--- a/backend/notification-service/src/main/resources/application-prod.yml
+++ b/backend/notification-service/src/main/resources/application-prod.yml
@@ -60,6 +60,8 @@ app:
       contract.notification: ${KAFKA_TOPIC_CONTRACT_NOTIFICATION:contract-notification}
       chat.room.created: ${KAFKA_TOPIC_CHAT_ROOM_CREATED:chat-events}
       submission.delivered: ${KAFKA_TOPIC_SUBMISSION_DELIVERED:submission-delivered}
+      submission.submitted: ${KAFKA_TOPIC_SUBMISSION_SUBMITTED:submission-submitted}
+      submission.rejected: ${KAFKA_TOPIC_SUBMISSION_REJECTED:submission-rejected}
       revision.requested: ${KAFKA_TOPIC_REVISION_REQUESTED:revision-requested}
       revision.delivered: ${KAFKA_TOPIC_REVISION_DELIVERED:revision-delivered}
       revision.submitted: ${KAFKA_TOPIC_REVISION_SUBMITTED:revision-submitted}
