feat: add Klang AI Transcription API proxy configuration
- Introduced a new public endpoint for the Klang AI Transcription API in SecurityConfig.
- Updated application-dev.yml and application-prod.yml to include the Klang API proxy settings, enabling requests to be routed to the Klang service with appropriate path filtering.

--- a/backend/api-gateway/src/main/resources/application-prod.yml
+++ b/backend/api-gateway/src/main/resources/application-prod.yml
@@ -72,6 +72,14 @@ spring:
               filters:
                 - StripPrefix=3
 
+            # Klang AI Transcription API Proxy
+            - id: klang-api
+              uri: https://api.klang.io
+              predicates:
+                - Path=/klang-api/**
+              filters:
+                - StripPrefix=1
+
 app:
   api-prefix: ${API_PREFIX:/api/v1}
   cors:
