feat: add task deadline reminder notification functionality
- Implemented createTaskDeadlineReminderNotification method in NotificationService to handle task deadline reminders for specialists.
- Added new notification type TASK_DEADLINE_REMINDER to NotificationType enum.
- Updated application configuration files to include task.deadline.reminder topic for both development and production environments.
- Enhanced TaskAssignmentRepository with a new method to find task assignments by multiple statuses.

--- a/backend/project-service/src/main/resources/application-dev.yml
+++ b/backend/project-service/src/main/resources/application-dev.yml
@@ -55,6 +55,7 @@ app:
       task.assignment.ready.to.start: task-assignment-ready-to-start
       task.assignment.canceled: task-assignment-canceled
       task.issue.reported: task-issue-reported
+      task.deadline.reminder: task-deadline-reminder
       contract.notification: contract-notification
       submission.delivered: submission-delivered
       submission.submitted: submission-submitted
