--- a/backend/project-service/src/main/resources/application-prod.yml
+++ b/backend/project-service/src/main/resources/application-prod.yml
@@ -57,6 +57,7 @@ app:
       task.assignment.ready.to.start: ${KAFKA_TOPIC_TASK_ASSIGNMENT_READY_TO_START:task-assignment-ready-to-start}
       task.assignment.canceled: ${KAFKA_TOPIC_TASK_ASSIGNMENT_CANCELED:task-assignment-canceled}
       task.issue.reported: ${KAFKA_TOPIC_TASK_ISSUE_REPORTED:task-issue-reported}
+      task.deadline.reminder: ${KAFKA_TOPIC_TASK_DEADLINE_REMINDER:task-deadline-reminder}
       contract.notification: ${KAFKA_TOPIC_CONTRACT_NOTIFICATION:contract-notification}
       submission.delivered: ${KAFKA_TOPIC_SUBMISSION_DELIVERED:submission-delivered}
       submission.submitted: ${KAFKA_TOPIC_SUBMISSION_SUBMITTED:submission-submitted}
