--- a/backend/notification-service/src/main/resources/application-dev.yml
+++ b/backend/notification-service/src/main/resources/application-dev.yml
@@ -56,6 +56,7 @@ app:
       task.assignment.ready.to.start: task-assignment-ready-to-start
       task.assignment.canceled: task-assignment-canceled
       task.issue.reported: task-issue-reported
+      task.deadline.reminder: task-deadline-reminder
       contract.notification: contract-notification
       chat.room.created: chat-events
       submission.delivered: submission-delivered
