feat: integrate milestone payment quote functionality
- Added OpenFeign dependency for internal service communication.
- Implemented milestone payment quote retrieval in ContractService, including late discount calculations.
- Updated WalletService to utilize the payment quote for milestone payments, ensuring accurate amount handling.
- Enhanced frontend components to display payment quote details, including late discounts and payment breakdown.
- Updated application configuration for Feign client settings and added late discount policy configurations.
- Modified PayMilestoneRequest to remove amount validation, relying on the computed payable amount from the quote.

--- a/backend/billing-service/pom.xml
+++ b/backend/billing-service/pom.xml
@@ -109,6 +109,12 @@
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
 
+		<!-- OpenFeign for internal service-to-service calls (e.g., project-service payment quotes) -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+
 		<!-- Spring Boot Actuator for health checks and monitoring -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
